# jellyfin-androidtv-launcher

./: README.md  settings.gradle.kts
CPPTools/: CMakeLists.txt  jni.cpp  main.cpp
CPPTools/config/: client-config.yaml  drogon-config.yaml
CPPTools/include/: ClientConfig.h  Constants.h  DrogonConfig.h  DrogonScreensaverController.h  DrogonServer.h  GLog.h  HttpGQScreensaver.h  library.h
CPPTools/include/desktop/: DrogonConfig.h  DrogonServer.h  DrogonWeatherController.h  HAMqtt.h  HAMqttCallback.h  HAOperate.h  IWeatherApi.h  WeatherAMapApi.h  WeatherData.h
CPPTools/include/drogon/: version.h
CPPTools/include/mobile/: HttpGQScreensaver.h  ScreensaverImageList.h
CPPTools/libs/win/: cares.lib  jsoncpp.lib
CPPTools/libs/win/debug/: drogon.lib  paho-mqtt3a.lib  paho-mqtt3c.lib  paho-mqtt3cs.lib  paho-mqttpp3.lib
CPPTools/libs/win/release/: drogon.lib  libcrypto.lib  paho-mqtt3as.lib  paho-mqttpp3.lib  trantor.lib
CPPTools/src/: ClientConfig.cpp  Constants.cpp  DrogonConfig.cpp  DrogonScreensaverController.cpp  DrogonServer.cpp  GLog.cpp  HttpGQScreensaver.cpp  library.cpp
CPPTools/src/desktop/: DrogonConfig.cpp  DrogonScreensaverController.cpp  DrogonServer.cpp  DrogonWeatherController.cpp  HAMqtt.cpp  HAMqttCallback.cpp  HAOperate.cpp  WeatherAMapApi.cpp
CPPTools/src/mobile/: HttpGQScreensaver.cpp  ScreensaverImageList.cpp
app/: build.gradle.kts  lovewlever.jks
app/src/main/: AndroidManifest.xml
app/src/main/java/org/jellyfin/androidtv/: JellyfinApplication.kt
app/src/main/java/org/jellyfin/androidtv/data/service/: BackgroundService.kt
app/src/main/java/org/jellyfin/androidtv/di/: AppModule.kt
app/src/main/java/org/jellyfin/androidtv/preference/: UserPreferences.kt
app/src/main/java/org/jellyfin/androidtv/ui/background/: AppBackground.kt
app/src/main/java/org/jellyfin/androidtv/ui/browsing/: MainActivity.kt
app/src/main/java/org/jellyfin/androidtv/ui/gqcustom/: AnyPopDialog.kt  AppListViewModel.kt  GQModifierExt.kt  GQScreenCommon.kt  GQScreensaver.kt  GQWeather.kt  GQWeatherData.kt  HomeAppList.kt  JNICommon.kt
app/src/main/java/org/jellyfin/androidtv/ui/home/: HomeFragment.kt
app/src/main/java/org/jellyfin/androidtv/ui/itemdetail/: FullDetailsFragmentHelper.kt
app/src/main/java/org/jellyfin/androidtv/ui/playback/: CustomPlaybackOverlayFragment.java
app/src/main/java/org/jellyfin/androidtv/ui/playback/overlay/: CustomPlaybackTransportControlGlue.java  LeanbackOverlayFragment.java  PlayingSelectionsView.kt
app/src/main/java/org/jellyfin/androidtv/ui/screensaver/: InAppScreensaver.kt
app/src/main/java/org/jellyfin/androidtv/ui/shared/: AnyPopDialog.kt  HomeAppList.kt
app/src/main/java/org/jellyfin/androidtv/ui/shared/toolbar/: HomeToolbar.kt  MainToolbar.kt  StartupToolbar.kt  TempOldToolbar.kt  Toolbar.kt
app/src/main/java/org/jellyfin/androidtv/ui/startup/: StartupActivity.kt
app/src/main/java/org/jellyfin/androidtv/viewmodel/: AppListViewModel.kt
app/src/main/java/org/jellyfin/androidtv/viewmodel/model/: AppInfo.kt
app/src/main/res/layout/: fragment_home.xml  fragment_server.xml
app/src/main/res/values/: theme_emerald.xml
buildSrc/src/main/kotlin/: VersionUtils.kt
gradle/: libs.versions.toml
